--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,25 +12,26 @@
         android:id="@+id/text_login_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="272dp"
-        android:text="Login de Usuário"
+        android:layout_marginTop="276dp"
+        android:text="Login"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
+        android:textColor="#F09232"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <EditText
         android:id="@+id/edit_text_email"
         android:layout_width="340dp"
         android:layout_height="42dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#FFA500"
         android:background="@drawable/rounded_border"
         android:hint="Email"
         android:paddingLeft="10dp"
-        android:padding="2dp"
+        android:padding="10dp"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,20 +45,26 @@
         android:layout_marginTop="16dp"
         android:hint="Senha"
         android:inputType="textPassword"
+        android:background="@drawable/rounded_border"
+        android:paddingLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_text_email" />
 
+
     <Button
         android:id="@+id/button_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Login"
+        android:layout_width="340dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_border_button"
+        android:text="Entrar"
+        android:textColorLink="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_text_password" />
-
+        app:layout_constraintTop_toBottomOf="@id/edit_text_password"
+        app:toggleCheckedStateOnClick="false" />
 
     <TextView
         android:id="@+id/registerLink"
@@ -67,7 +74,7 @@
         android:clickable="true"
         android:focusable="true"
         android:text="Cadastre-se"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_login" />
